shareit v0.8 add-item-requests-and-gateway